style.css
/*
Theme Name: ASU Web Standards Wordpress Theme
Theme URI: https://github.com/asu-ke-web-services/ASU-Web-Standards-Wordpress-Theme
Author: <a href="https://sustainability.asu.edu/?utm_source=wordpress&utm_medium=theme&utm_campaign=ASU-Wordpress-Web-Standards-Theme">The Julie Ann Wrigley Global Institute of Sustainability</a>
Author URI: http://sustainability.asu.edu
Description: ASU Web Standards compliant Wordpress Theme, for questions and updates please use the github repository: <a href="https://github.com/gios-asu/ASU-Wordpress-Web-Standards-Theme?utm_source=wordpress&utm_medium=theme&utm_campaign=ASU-Wordpress-Web-Standards-Theme">github.com/gios-asu/ASU-Wordpress-Web-Standards-Theme</a>.
Version: 2.2.21
Text Domain: asu-wordpress-web-standards

GitHub Theme URI: https://github.com/asu-ke-web-services/ASU-Web-Standards-Wordpress-Theme
GitHub Branch:    master
Requires PHP: 5.4.0

Licensed under MIT.

*/

/* =WordPress Core
-------------------------------------------------------------- */
.alignnone {
  margin: 5px 20px 20px 0;
}

/* The 404 page h1 wont clear the main nav on its own */
.four-oh-four-error-page .fdt-home-container {
  clear: both;
}

.screen-reader-text {
  height: 1px;
  left: -10000px;
  overflow: hidden;
  position: absolute;
  top: auto;
  width: 1px;
}

.aligncenter,
div.aligncenter {
  display: block;
  margin: 5px auto 5px auto;
}

.alignright {
  float: right;
  margin: 5px 0 20px 20px;
}

.alignleft {
  float: left;
  margin: 5px 20px 20px 0;
}

a img.alignright {
  float: right;
  margin: 5px 0 20px 20px;
}

a img.alignnone {
  margin: 5px 20px 20px 0;
}

a img.alignleft {
  float: left;
  margin: 5px 20px 20px 0;
}

a img.aligncenter {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.wp-caption {
  background: #fff;
  border: 1px solid #f0f0f0;
  max-width: 96%; /* Image does not overflow the content area */
  padding: 5px 3px 10px;
  text-align: center;
}

.wp-caption.alignnone {
  margin: 5px 20px 20px 0;
}

.wp-caption.alignleft {
  margin: 5px 20px 20px 0;
}

.wp-caption.alignright {
  margin: 5px 0 20px 20px;
}

.wp-caption img {
  border: 0 none;
  height: auto;
  margin: 0;
  max-width: 98.5%;
  padding: 0;
  width: auto;
}

.wp-caption .wp-caption-text {
  font-size: 11px;
  line-height: 17px;
  margin: 0;
  padding: 0 4px 5px;
}

.sticky {
  border: 0;
}

.gallery-caption {
  border: 0;
}

.bypostauthor {
  border: 0;
}

/* ========
 * Comments
 * ======== */
ol.comment-list {
  list-style: none;
}

ol.comment-list > li {
  border-top: 1px solid #b7b7b7;
  display: block;
  line-height: 1.44;
  padding: 8px;
}

ol.comment-list > li:nth-child(odd) {
  background-color: #fafafa;
}

ol.comment-list > li:hover {
  background-color: whitesmoke;
}

.comment-edit-link {
  float: right;
}

.logged-in-as {
  float: right;
}

.comment-form-comment label {
  display: block;
}

.comment-form-comment textarea {
  width: 100%;
}

.form-allowed-tags code {
  display: block;
  white-space: pre-wrap; /* css-3 */
  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */
  white-space: -o-pre-wrap; /* Opera 7 */
  word-wrap: break-word; /* Internet Explorer 5.5+ */
}

/* ==========
 * Blog Posts
 * ========== */
article.post {
  background-color: #f5f5f5;
  border-bottom: 1px solid #b7b7b7;
  display: block;
  margin-bottom: 10px;
  padding: 20px;
}

article.post header h1 {
  margin-top: 0;
}

article.post .entry-meta {
  font-size: 0.8em;
  margin-bottom: 20px;
}

article.post .entry-meta .updated {
  margin-left: 10px;
}

article.post .entry-footer {
  font-size: 0.8em;
  margin-top: 20px;
}

article.sticky {
  border-bottom: 0;
  border-left: 8px solid #903;
}

article img {
  max-width: 100%;
}

.single article {
  background-color: transparent;
  border-bottom: 0;
}

/* Sidebar */
.widget ul {
  list-style: none;
  padding-left: 0;
}

.widget ul li {
  border: 0;
  border-top: 1px solid #d7d7d7;
  color: #903;
  font-weight: 400;
  list-style: none;
  padding: 10px 5px;
}

.widget ul li a {
  border-bottom: 0;
}

.widget ul li:hover {
  background-color: #f5f5f5;
  text-decoration: none;
}

.footer a.footer-logo-link {
  border: 0;
  text-decoration: none;
}

/*
 * Gallery
 */
.gallery:after {
  clear: both;
  content: "";
  display: table;
}

.gallery-item {
  float: left;
  padding-bottom: 10px;
  padding-right: 10px;
}

.footer span.fa {
  color: #a9a9a9;
}

